--- a/style.css
+++ b/style.css
@@ -63,4 +63,18 @@ body {
     cursor: pointer;
     animation: forwards;
   }
+  .signin-button {
+    background-color: #337ab7;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .signin-button:hover  {
+    background-color: #286090;
+    
+  }
   
